<resources>
    <string name="app_name">Sprescia</string>
    <string name="title_run">Run</string>
    <string name="title_stats">Daily Stats</string>
    <string name="title_month">Monthly Stats</string>
    <string name="dialog_date">Date:</string>
    <string name="dialog_steps">Steps:</string>
    <string name="dialog_km">Km:</string>
    <string name="dialog_time">Time:</string>
    <string name="desc_km">km</string>
    <string name="desc_time">time</string>
    <string name="desc_kmh">km/h</string>
    <string name="desc_steps">steps</string>
    <string name="desc_add">add</string>
    <string name="desc_edit">edit</string>
    <string name="desc_delete">delete</string>
    <string name="display_km">%1.2f km</string>
    <string name="display_kmh">%1.2f km/h</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_speed">Speed</string>
    <string name="menu_dist">Distance</string>
    <string name="menu_time">Time</string>
</resources>